<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".LogInActivity">

    <EditText
        android:id="@+id/password_input_from_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_from_login" />

    <EditText
        android:id="@+id/email_input_from_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/login_mascotapp_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/mascotapp"
        android:textColor="#FF9800"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/log_in_button_from_login"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF9800"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_from_login" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_mascotapp_text2"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_button_from_login">

        <TextView
            android:id="@+id/textaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="12dp"
            android:text="@string/sign_up"
            android:textColor="#FF9800"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/log_in_button_from_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/log_in_button_from_login" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="812dp"
        android:layout_height="433dp"
        android:translationZ="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/background" />


</androidx.constraintlayout.widget.ConstraintLayout>