<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="812dp"
                    android:layout_height="433dp"
                    android:translationZ="-1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.45"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/background" />

                <TextView
                    android:id="@+id/login_mascotapp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/mascotapp"
                    android:textColor="#FF9800"
                    android:textSize="46sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_mascotapp_text"
                    app:srcCompat="@drawable/logo" />

                <EditText
                    android:id="@+id/email_input_from_signup"
                    android:layout_width="340dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="24dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <EditText
                    android:id="@+id/username_input_from_signup"
                    android:layout_width="340dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_input_from_signup" />

                <EditText
                    android:id="@+id/password_input_from_signup"
                    android:layout_width="340dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username_input_from_signup" />

                <EditText
                    android:id="@+id/password_confirm_input_from_signup"
                    android:layout_width="340dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_input_from_signup" />

                <Switch
                    android:id="@+id/signup_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Are you a service provider?   "
                    android:textColor="#3C3F41"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_confirm_input_from_signup" />

                <Spinner
                    android:id="@+id/signup_service_type"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="@+id/password_confirm_input_from_signup"
                    app:layout_constraintStart_toStartOf="@+id/password_confirm_input_from_signup"
                    app:layout_constraintTop_toBottomOf="@+id/signup_switch" />

                <Spinner
                    android:id="@+id/provinces"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="@+id/signup_service_type"
                    app:layout_constraintStart_toStartOf="@+id/signup_service_type"
                    app:layout_constraintTop_toBottomOf="@+id/signup_service_type" />

                <EditText
                    android:id="@+id/locality"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="Locality"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/provinces"
                    app:layout_constraintStart_toStartOf="@+id/provinces"
                    app:layout_constraintTop_toBottomOf="@+id/provinces" />

                <EditText
                    android:id="@+id/street"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="Street "
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/locality"
                    app:layout_constraintStart_toStartOf="@+id/locality"
                    app:layout_constraintTop_toBottomOf="@+id/locality" />

                <EditText
                    android:id="@+id/postal_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="Postal code"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/street"
                    app:layout_constraintStart_toStartOf="@+id/street"
                    app:layout_constraintTop_toBottomOf="@+id/street" />

                <ProgressBar
                    android:id="@+id/progress_bar_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/signup_button_from_signup"
                    app:layout_constraintBottom_toBottomOf="@id/signup_button_from_signup"/>

                <Button
                    android:id="@+id/signup_button_from_signup"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:background="#FF9800"
                    android:text="@string/sign_up_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/postal_code" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="170dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_button_from_signup">

                    <TextView
                        android:id="@+id/textaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account?"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/login_signup_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="12dp"
                        android:text="Log In"
                        android:textColor="#FF9800"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
